--- a/nginx/centos7/nginx.conf.template
+++ b/nginx/centos7/nginx.conf.template
@@ -63,6 +63,7 @@ http {
         
         ssl_certificate "/etc/pki/tls/certs/decoy-site.crt";
         ssl_certificate_key "/etc/pki/tls/private/decoy-site.key";
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_session_cache shared:SSL:1m;
         ssl_session_timeout  10m;
         ssl_ciphers HIGH:!aNULL:!MD5:!SEED:!IDEA:!3DES;
