--- a/nginx/ubuntu18/nginx.conf.template
+++ b/nginx/ubuntu18/nginx.conf.template
@@ -64,6 +64,7 @@ http {
         
         ssl_certificate "/etc/ssl/certs/decoy-site.crt";
         ssl_certificate_key "/etc/ssl/private/decoy-site.key";
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_session_cache shared:SSL:1m;
         ssl_session_timeout  10m;
         ssl_ciphers HIGH:!aNULL:!MD5:!SEED:!IDEA:!3DES;
