--- a/apache24/centos7/httpd_conf/conf.d/ssl.conf.template
+++ b/apache24/centos7/httpd_conf/conf.d/ssl.conf.template
@@ -97,7 +97,9 @@ SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
 #   SSL Cipher Suite:
 #   List the ciphers that the client is permitted to negotiate.
 #   See the mod_ssl documentation for a complete list.
-SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA
+#SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA
+# Enable forward secrecy. It protects data shared between the client and the server even if the private key is compromised.
+SSLCipherSuite "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS"
 
 #   Speed-optimized SSL Cipher configuration:
 #   If speed is your main concern (on busy HTTPS servers e.g.),
@@ -243,7 +245,9 @@ SSLCACertificateFile /etc/pki/tls/certs/decoy_site_ca_bundle.crt
     
   SSLEngine on
   SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1 
-  SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA
+  #SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA
+  # Enable forward secrecy. It protects data shared between the client and the server even if the private key is compromised.
+  SSLCipherSuite "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS"  
   SSLHonorCipherOrder on
   SSLCertificateKeyFile /etc/pki/tls/private/msg_site.key 
   SSLCertificateFile /etc/pki/tls/certs/msg_site.crt
