--- a/apache24/ubuntu18/httpd_conf/sites-available/ssl-decoy-site.conf.template
+++ b/apache24/ubuntu18/httpd_conf/sites-available/ssl-decoy-site.conf.template
@@ -104,7 +104,9 @@
 		#	 directives are used in per-directory context.
 		#SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
     SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
-    SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA:!3DES
+    #SSLCipherSuite HIGH:!aNULL:!MD5:!SEED:!IDEA:!3DES
+    # Enable forward secrecy. It protects data shared between the client and the server even if the private key is compromised.
+    SSLCipherSuite "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS"    
     SSLHonorCipherOrder on
 
 		<FilesMatch "\.(cgi|pl|shtml|phtml|php)$">
